Fully rework docker-entrypoint.